--- a/CompanyApi/CompanyApi.csproj
+++ b/CompanyApi/CompanyApi.csproj
@@ -5,10 +5,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Repository\" />
+    <Folder Include="Model\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper" Version="1.50.5" />
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
