--- a/CompanyApi/appsettings.json
+++ b/CompanyApi/appsettings.json
@@ -1,5 +1,18 @@
 {
   "DbSettings": {
     "Connection": "Data Source=tappqa;Initial Catalog=Training-LR-Company;Integrated Security=True"
+  },
+
+  "Logging": {
+    "LogLevel": {
+      "Default": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "Logger": {
+    "Version": "DEBUG",
+    "ApplicationName": "my_awesome_application",
+    "Team": "junior_team",
+    "Dev": true
   }
 }
