--- a/CompanyApi/appsettings.json
+++ b/CompanyApi/appsettings.json
@@ -14,5 +14,9 @@
     "ApplicationName": "my_awesome_application",
     "Team": "junior_team",
     "Dev": true
+  },
+
+  "TappSecret": {
+    "Secret": "8f3a454e-194a-420b-918f-8bf83f9cf578"
   }
 }
